--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 	</head>
 	<body>
 		<header>
-			<h1>Kevin McGladdery</h1>
-			<h2>Developer</h2>
-			<p>Hi. I'm Kevin McGladdery. I'm working everyday to become a better
+			<h1>Kevin McGladdery<br/>Developer</h1>
+			<p>Hi! I'm Kevin McGladdery. I'm working everyday to become a better
 			programmer. Here are some of the things I've been working on:</p>
 		</header>
 		<section>
