Add subtitles to projects

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<section>
 			<div class="project">
 				<h1>Earthquakr</h1>
+				<h2>iOS with Swift</h2>
 				<p>An iOS app for finding nearby earthquakes. I learned
 				about Cocoapods, MapKit,
 				CoreLocation, TDD with Quick/Nimble, storyboards, segues, peek
@@ -27,6 +28,7 @@
 			</div>
 			<div class="project">
 				<h1>ColorTools</h1>
+				<h2>Cocoapods with Swift</h2>
 				<p> A Swift library for working with UIColor. I learned about 
 				class extensions in Swift, building my own cocoapod, even more 
 				TDD with Quick/Nimble, bitwise operations, and the joy that is 
@@ -37,6 +39,7 @@
 			</div>
 			<div class="project">
 				<h1>Feedings</h1>
+				<h2>iOS with Swift</h2>
 				<p>An iOS app for tracking tube feedings. I learned about using Parse as a cloud storage solution, functional reactive programming in Swift, and advanced Auto Layout.</p>
 				<div>
 					<p></p>
@@ -44,6 +47,7 @@
 			</div>
 			<div class="project">
 				<h1>Dodecaphony</h1>
+				<h2>Ruby with RSpec</h2>
 				<p>A Ruby gem to help calculate tone rows. I learned about TDD with RSpec and about advanced metaprogramming in Ruby.</p>
 				<div>
 					<p></p>
@@ -51,6 +55,7 @@
 			</div>
 			<div class="project">
 				<h1>Filmstock</h1>
+				<h2>iOS with Swift</h2>
 				<p>An iOS app for tracking the contents of film cameras. This app was a lot of "firsts" for me; It was my first Swift app and my first app in the App Store.  I learned the basics of Foundation and UIKit, as well as everything involved with successfully submitting an app to the App Store.</p>
 				<div>
 					<p></p>
@@ -58,6 +63,7 @@
 			</div>
 			<div class="project">
 				<h1>Exercises</h1>
+				<h2>Swift, Ruby, Elixir, Clojure, Racket, and Haskell</h2>
 				<p>A series of exercises intended to help me grow as a programmer. I'll be implementing different algorithms and data structures while solving problems. I hope to use a variety of languages, including Swift, Ruby, Haskell, Clojure, Racket, Erlang, and Elixir.</p>
 				<div>
 					<p></p>
