Add Earthquakr links

--- a/index.html
+++ b/index.html
@@ -15,25 +15,30 @@
 		</header>
 		<section>
 			<div class="project">
-				<h1>Earthquakr</h1>
-				<h2>iOS with Swift</h2>
-				<p>An iOS app for finding nearby earthquakes. I learned
-				about Cocoapods, MapKit,
-				CoreLocation, TDD with Quick/Nimble, storyboards, segues, peek
-				and pop with 3D Touch, and parsing JSON from an external
-				API.</p>
-				<div>
-					<p></p>
+				<div class="info">
+					<h1>Earthquakr</h1>
+					<h2>iOS with Swift</h2>
+					<p>An iOS app for finding nearby earthquakes. I learned
+					about Cocoapods, MapKit,
+					CoreLocation, TDD with Quick/Nimble, storyboards, segues, peek
+					and pop with 3D Touch, and parsing JSON from an external
+					API.</p>
+				</div>
+				<div class="links">
+					<p>View on <a href="https://github.com/runkmc/earthquakr">Github</a> 
+				| <a href="https://itunes.apple.com/us/app/earthquakr/id1054835639?ls=1&mt=8">App Store</a></p> 
 				</div>
 			</div>
 			<div class="project">
-				<h1>ColorTools</h1>
-				<h2>Cocoapods with Swift</h2>
-				<p> A Swift library for working with UIColor. I learned about 
-				class extensions in Swift, building my own cocoapod, even more 
-				TDD with Quick/Nimble, bitwise operations, and the joy that is 
-				UnsafeMutablePointer.</p>
-				<div>
+				<div class="info">
+					<h1>ColorTools</h1>
+					<h2>Cocoapods with Swift</h2>
+					<p> A Swift library for working with UIColor. I learned about 
+					class extensions in Swift, building my own cocoapod, even more 
+					TDD with Quick/Nimble, bitwise operations, and the joy that is 
+					UnsafeMutablePointer.</p>
+				</div>
+				<div class="links">
 					<p></p>
 				</div>
 			</div>
