Add links for Colortools

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				</div>
 				<div class="links">
 					<p>View on <a href="https://github.com/runkmc/earthquakr">Github</a> 
-				| <a href="https://itunes.apple.com/us/app/earthquakr/id1054835639?ls=1&mt=8">App Store</a></p> 
+					| <a href="https://itunes.apple.com/us/app/earthquakr/id1054835639?ls=1&mt=8">App Store</a></p> 
 				</div>
 			</div>
 			<div class="project">
@@ -39,7 +39,8 @@
 					UnsafeMutablePointer.</p>
 				</div>
 				<div class="links">
-					<p></p>
+					<p>View on <a href="https://github.com/runkmc/Colortools">Github</a> 
+					| <a href="http://cocoapods.org/pods/Colortools">App Store</a></p>
 				</div>
 			</div>
 			<div class="project">
