Add links for feedings

--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
 				</div>
 			</div>
 			<div class="project">
-				<h1>Feedings</h1>
-				<h2>iOS with Swift</h2>
-				<p>An iOS app for tracking tube feedings. I learned about using Parse as a cloud storage solution, functional reactive programming in Swift, and advanced Auto Layout.</p>
-				<div>
-					<p></p>
+				<div class="info">
+					<h1>Feedings</h1>
+					<h2>iOS with Swift</h2>
+					<p>An iOS app for tracking tube feedings. I learned about using Parse as a cloud storage solution, functional reactive programming in Swift, and advanced Auto Layout.</p>
+				</div>
+				<div class="links">
+					<p>View on <a href="https://github.com/runkmc/feedings">Github</a></p>
 				</div>
 			</div>
 			<div class="project">
