--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
 			</div>
 			<div class="project">
 				<div class="info">
+				<h1>Exercises</h1>
+				<h2>Swift, Ruby, Elixir, Clojure, Racket, and Haskell</h2>
+				<p>A series of exercises intended to help me grow as a programmer. I'll be implementing different algorithms and data structures while solving problems. I hope to use a variety of languages, including Swift, Ruby, Haskell, Clojure, Racket, Erlang, and Elixir.</p>
+				</div>
+				<div class="links">
+					<p>View on <a href="https://github.com/runkmc/exercises">Github</a></p>
+				</div>
+			</div>
+			<div class="project">
+				<div class="info">
 					<h1>ColorTools</h1>
 					<h2>Cocoapods with Swift</h2>
 					<p> A Swift library for working with UIColor. I learned about 
@@ -54,27 +64,24 @@
 				</div>
 			</div>
 			<div class="project">
-				<h1>Dodecaphony</h1>
-				<h2>Ruby with RSpec</h2>
-				<p>A Ruby gem to help calculate tone rows. I learned about TDD with RSpec and about advanced metaprogramming in Ruby.</p>
-				<div>
-					<p></p>
+				<div class="info">
+					<h1>Dodecaphony</h1>
+					<h2>Ruby with RSpec</h2>
+					<p>A Ruby gem to help calculate tone rows. I learned about TDD with RSpec and about advanced metaprogramming in Ruby.</p>
+				</div>
+				<div class="links">
+					<p>View on <a href="https://github.com/runkmc/dodecaphony">Github</a> 
+					| <a href="https://rubygems.org/gems/dodecaphony">Rubygems</a></p>
 				</div>
 			</div>
 			<div class="project">
-				<h1>Filmstock</h1>
-				<h2>iOS with Swift</h2>
-				<p>An iOS app for tracking the contents of film cameras. This app was a lot of "firsts" for me; It was my first Swift app and my first app in the App Store.  I learned the basics of Foundation and UIKit, as well as everything involved with successfully submitting an app to the App Store.</p>
-				<div>
-					<p></p>
+				<div class="info">
+					<h1>Filmstock</h1>
+					<h2>iOS with Swift</h2>
+					<p>An iOS app for tracking the contents of film cameras. This app was a lot of "firsts" for me; It was my first Swift app and my first app in the App Store.  I learned the basics of Foundation and UIKit, as well as everything involved with successfully submitting an app to the App Store.</p>
 				</div>
-			</div>
-			<div class="project">
-				<h1>Exercises</h1>
-				<h2>Swift, Ruby, Elixir, Clojure, Racket, and Haskell</h2>
-				<p>A series of exercises intended to help me grow as a programmer. I'll be implementing different algorithms and data structures while solving problems. I hope to use a variety of languages, including Swift, Ruby, Haskell, Clojure, Racket, Erlang, and Elixir.</p>
-				<div>
-					<p></p>
+				<div class="links">
+					<p>View on <a href="https://itunes.apple.com/us/app/filmstock/id1046142022?ls=1&mt=8">App Store</a></p>
 				</div>
 			</div>
 		</section>
