--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		<header>
 			<h1>Kevin McGladdery<br/>Developer</h1>
 			<p>Hi! I'm Kevin McGladdery. I'm working everyday to become a better
-			programmer. Here are some of the things I've been working on:</p>
+			programmer. You can find me on <a href="https://github.com/runkmc">Github</a>, 
+			<a href="https://twitter.com/run_kmc">Twitter</a>, and a <a href="http://kmcg.io">bunch of other places</a>.
+			Here are some of the things I've been working on:</p>
 		</header>
 		<section>
 			<div class="project">
