Change errant link text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				</div>
 				<div class="links">
 					<p>View on <a href="https://github.com/runkmc/Colortools">Github</a> 
-					| <a href="http://cocoapods.org/pods/Colortools">App Store</a></p>
+					| <a href="http://cocoapods.org/pods/Colortools">Cocoapods</a></p>
 				</div>
 			</div>
 			<div class="project">
