Remove reference to Erlang

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="info">
 				<h1>Exercises</h1>
 				<h2>Swift, Ruby, Elixir, Clojure, Racket, and Haskell</h2>
-				<p>A series of exercises intended to help me grow as a programmer. I'll be implementing different algorithms and data structures while solving problems. I hope to use a variety of languages, including Swift, Ruby, Haskell, Clojure, Racket, Erlang, and Elixir.</p>
+				<p>A series of exercises intended to help me grow as a programmer. I'll be implementing different algorithms and data structures while solving problems. I hope to use a variety of languages, including Swift, Ruby, Haskell, Clojure, Racket, and Elixir.</p>
 				</div>
 				<div class="links">
 					<p>View on <a href="https://github.com/runkmc/exercises">Github</a></p>
