--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="https://code.cdn.mozilla.net/fonts/fira.css">
+		<!-- <link rel="stylesheet" href="https://code.cdn.mozilla.net/fonts/fira.css"> -->
 		<link rel="stylesheet" href="main.css">
 		<meta name="viewport" content="width=device-width; initial-scale=1.0;
 		maximum-scale=1.0; user-scalable=0;" />
