--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
 		<section>
 			<div class="project">
 				<div class="info">
+					<h1>Neos</h1>
+					<h2>iOS with Swift</h2>
+					<p>An iOS app for viewing the asteroids that are making
+					their closest pass to Earth today. Design drawn from 60s
+					era Sci-Fi and NASA documents from the Mercury and Gemini
+					programs. To be launched in February 2016.</p>
+				</div>
+				<div class="links">
+					<p>View on <a
+						href="https://github.com/runkmc/neos">Github</a> | 
+					<a href="https://itunes.apple.com/us/app/neos/id1073483420">App Store</a></p>
+				</div>
+			</div>
+			<div class="project">
+				<div class="info">
 					<h1>Earthquakr</h1>
 					<h2>iOS with Swift</h2>
 					<p>An iOS app for finding nearby earthquakes. I learned
@@ -74,19 +89,6 @@
 				<div class="links">
 					<p>View on <a href="https://github.com/runkmc/feedings">Github</a> | 
 					<a href="https://itunes.apple.com/us/app/feedings/id1049211184?ls=1&mt=8">App Store</a></p>
-				</div>
-			</div>
-			<div class="project">
-				<div class="info">
-					<h1>Neos</h1>
-					<h2>iOS with Swift</h2>
-					<p>An iOS app for viewing the asteroids that are making
-					their closest pass to Earth today. Design drawn from 60s
-					era Sci-Fi and NASA documents from the Mercury and Gemini
-					programs. To be launched in February 2016.</p>
-				</div>
-				<div class="links">
-					<p>View on <a href="https://github.com/runkmc/neos">Github</a></p>
 				</div>
 			</div>
 			<div class="project">
