Fix Neos description

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<p>An iOS app for viewing the asteroids that are making
 					their closest pass to Earth today. Design drawn from 60s
 					era Sci-Fi and NASA documents from the Mercury and Gemini
-					programs. To be launched in February 2016.</p>
+					programs. Launched in February 2016.</p>
 				</div>
 				<div class="links">
 					<p>View on <a
