Add Gradable and Contrapunctus

--- a/index.html
+++ b/index.html
@@ -83,12 +83,35 @@
 			<div class="project">
 				<div class="info">
 					<h1>Feedings</h1>
-					<h2>iOS with Swift</h2>
+					<h2>Swift</h2>
 					<p>An iOS app for tracking tube feedings. I learned about using Parse as a cloud storage solution, functional reactive programming in Swift, and advanced Auto Layout.</p>
 				</div>
 				<div class="links">
 					<p>View on <a href="https://github.com/runkmc/feedings">Github</a> | 
 					<a href="https://itunes.apple.com/us/app/feedings/id1049211184?ls=1&mt=8">App Store</a></p>
+				</div>
+			</div>
+			<div class="project">
+				<div class="info">
+					<h1>Gradable</h1>
+					<h2>Swift and CoreData</h2>
+					<p>An iPad app that serves as a gradebook for teachers.
+					Launching in late April/Early May 2016.</p>
+				</div>
+				<div class="links">
+					<p>View on <a href="https://github.com/runkmc/gradable">Github</a></p>
+				</div>
+			</div>
+			<div class="project">
+				<div class="info">
+					<h1>Contrapunctus</h1>
+					<h2>Racket, Sass, Pollen, and Lilypond</h2>
+					<p>An online booklet about 16th century counterpoint. I was
+					responsible for every aspect of this project, including
+					content, design, and development.</p>
+				</div>
+				<div class="links">
+					<a href="http://contrapunctus.io">Contrapunctus</a></p>
 				</div>
 			</div>
 			<div class="project">
