Fix Feedings description

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<div class="project">
 				<div class="info">
 					<h1>Feedings</h1>
-					<h2>Swift</h2>
+					<h2>iOS with Swift</h2>
 					<p>An iOS app for tracking tube feedings. I learned about using Parse as a cloud storage solution, functional reactive programming in Swift, and advanced Auto Layout.</p>
 				</div>
 				<div class="links">
