Remove reference to cocoapods

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="project">
 				<div class="info">
 					<h1>ColorTools</h1>
-					<h2>Cocoapods with Swift</h2>
+					<h2>Swift</h2>
 					<p> A Swift library for working with UIColor. I learned about 
 					class extensions in Swift, building my own cocoapod, even more 
 					TDD with Quick/Nimble, bitwise operations, and the joy that is 
