Add Either project

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
 			</div>
 			<div class="project">
 				<div class="info">
+					<h1>Either</h1>
+					<h2>Swift</h2>
+					<p>An implementation of Haskell's Either type implemented
+					in Swift.</p>
+				</div>
+				<div class="links">
+					<p>View on <a href="https://github.com/runkmc/either">Github</a></p> 
+				</div>
+			</div>
+			<div class="project">
+				<div class="info">
 				<h1>Exercises</h1>
 				<h2>Swift, Ruby, Elixir, Clojure, Racket, and Haskell</h2>
 				<p>A series of exercises intended to help me grow as a programmer. I'll be implementing different algorithms and data structures while solving problems. I hope to use a variety of languages, including Swift, Ruby, Haskell, Clojure, Racket, and Elixir.</p>
