Update description of Either

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
 				<div class="info">
 					<h1>Either</h1>
 					<h2>Swift</h2>
-					<p>An implementation of Haskell's Either type implemented
-					in Swift.</p>
+					<p>An implementation of Haskell's Either type in Swift. It
+					makes extensive use of generics, and will be published as
+					a cocoapod in April 2016.</p>
 				</div>
 				<div class="links">
 					<p>View on <a href="https://github.com/runkmc/either">Github</a></p> 
