Add Icicle to projects

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
 			</div>
 			<div class="project">
 				<div class="info">
+					<h1>Icicle</h1>
+					<h2>iOS with Swift</h2>
+					<p>A weather app for iOS, with information display
+					principles taken from Edward Tufte's work. Shipping early
+					June, 2016.</p>
+				</div>
+				<div class="links">
+					<p>View on <a href="https://github.com/runkmc/icicle">Github</a></p> 
+				</div>
+			</div>
+			<div class="project">
+				<div class="info">
 					<h1>Either</h1>
 					<h2>Swift</h2>
 					<p>An implementation of Haskell's Either type in Swift. It
