Add link to cocoapods for Either

--- a/index.html
+++ b/index.html
@@ -72,12 +72,10 @@
 				<div class="info">
 					<h1>Either</h1>
 					<h2>Swift</h2>
-					<p>An implementation of Haskell's Either type in Swift. It
-					makes extensive use of generics, and will be published as
-					a cocoapod in April 2016.</p>
+					<p>An implementation of Haskell's Either type in Swift.</p>
 				</div>
 				<div class="links">
-					<p>View on <a href="https://github.com/runkmc/either">Github</a></p> 
+					<p>View on <a href="https://github.com/runkmc/either">Github</a> | <a href="https://cocoapods.org/pods/Either">Cocoapods</a></p> 
 				</div>
 			</div>
 			<div class="project">
