Change description of NEOS

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 					<h1>Neos</h1>
 					<h2>iOS with Swift</h2>
 					<p>An iOS app for viewing the asteroids that are making
-					their closest pass to Earth today. Design drawn from 60s
-					era Sci-Fi and NASA documents from the Mercury and Gemini
+					their closest pass to Earth today. The idea and the design
+					came after reading through 
+					NASA documents from the Mercury and Gemini
 					programs. Launched in February 2016.</p>
 				</div>
 				<div class="links">
